--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -1,3 +1,6 @@
+$marginBase: 20px;
+$widthComponentWithMargin: calc(100% - 2 * $marginBase);
+
 @media screen and (min-width: 1441px) {
     html {
         display: flex;
@@ -7,8 +10,13 @@
 }
 body {
     margin: 0 auto;
-    max-width: 1440px;
-    width: 100%;
+    max-width: 1240px;
+    width: 90%;
     height: auto;
     font-family: 'Montserrat', sans-serif;
+
+    @include tab {
+        margin: $marginBase;
+        width: 100%;
+    }
 }
