--- a/src/sass/base/_responsive.scss
+++ b/src/sass/base/_responsive.scss
@@ -1,16 +1,22 @@
 $breakpoint: (
-  tab: 1024px,
-  mobile: 767px,
+    desktop: 1200px,
+    tab: 1024px,
+    mobile: 767px,
 );
+@mixin desktop {
+    @media screen and (max-width: map-get($breakpoint, desktop)) {
+        @content;
+    }
+}
 
 @mixin tab {
-  @media screen and (max-width: map-get($breakpoint, tab)) {
-    @content;
-  }
+    @media screen and (max-width: map-get($breakpoint, tab)) {
+        @content;
+    }
 }
 
 @mixin mobile {
-  @media screen and (max-width: map-get($breakpoint, mobile)) {
-    @content;
-  }
+    @media screen and (max-width: map-get($breakpoint, mobile)) {
+        @content;
+    }
 }
