--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -1,6 +1,5 @@
 $color-primary: #ff6060;
 $color-secondary: #f6f6f6;
-$color-tertiary: #c4c4c4;
 
-$bg__container: $color_primary;
+$bg__container: $color-secondary;
 $bg__footer: #000000;
