--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -4,5 +4,6 @@
 @import './base/_variables';
 @import './utils/_loading';
 @import './section/_banner';
+@import './section/_gridAppartement';
 @import './section/_header';
 @import './section/_footer';
