--- a/src/sass/section/_banner.scss
+++ b/src/sass/section/_banner.scss
@@ -10,11 +10,21 @@
             z-index: -1;
             position: relative;
             margin-top: 60px;
-            border-radius: 20px;
+            border-radius: 25px;
             display: flex;
             flex-direction: row;
             justify-content: center;
             align-items: center;
+            width: 100%;
+            @include tab {
+                margin-top: 30px;
+                max-width: $widthComponentWithMargin;
+            }
+            @include mobile {
+                height: 111px;
+                justify-content: start;
+                margin-top: 0;
+            }
             &::after {
                 content: '';
                 color: white;
@@ -26,8 +36,12 @@
                 height: 223px;
                 background: black;
                 opacity: 0.3;
-                border-radius: 20px;
+                border-radius: 25px;
                 z-index: 1;
+
+                @include mobile {
+                    height: 111px;
+                }
             }
         }
     }
@@ -41,4 +55,10 @@ h1 {
     z-index: 2;
     width: fit-content;
     height: max-content;
+    @include mobile {
+        font-size: 24px;
+        line-height: 24px;
+        width: 65%;
+        margin-left: 16px;
+    }
 }
