--- a/src/sass/section/_footer.scss
+++ b/src/sass/section/_footer.scss
@@ -4,15 +4,13 @@ footer {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
     max-width: 1440px;
+    width: 100%;
     height: 209px;
-    z-index: 999;
     color: white;
     font-size: 24px;
     line-height: 34px;
+    margin-top: 20px;
     @include mobile {
         font-size: 12px;
         line-height: 17px;
