--- a/src/sass/section/_gridAppartement.scss
+++ b/src/sass/section/_gridAppartement.scss
@@ -7,11 +7,18 @@
     grid-template-columns: 1fr 1fr 1fr;
     gap: 50px;
     background-color: $bg__container;
+    transition: all ease-in-out 300ms;
 
     @include desktop {
         grid-template-columns: 1fr 1fr;
         gap: 20px;
-        padding: 0;
+        padding: 20px 0;
+        width: 100%;
+    }
+    @include tab {
+        grid-template-columns: 1fr 1fr;
+        gap: 20px;
+        padding: 20px 0;
         width: calc(100% - 40px);
     }
     @include mobile {
@@ -22,18 +29,21 @@
     &-cardAppart {
         margin: auto;
         border-radius: 10px;
-        width: 340px;
+        max-width: 340px;
+        width: 100%;
         height: 340px;
         position: relative;
         background-color: $color-primary;
+        text-decoration: none;
+
         @include mobile {
-            width: 100%;
+            max-width: 100%;
             height: 255px;
-            margin: 0;
+            margin: auto;
         }
         & img {
-            width: 340px;
-            height: 340px;
+            width: 100%;
+            height: 100%;
             object-fit: cover;
             border-radius: 10px;
             position: relative;
@@ -42,12 +52,7 @@
             z-index: 0;
             transition: all ease-in-out 300ms;
             &:hover {
-                cursor: pointer;
                 opacity: 0.3;
-            }
-            @include mobile {
-                height: 255px;
-                width: 100%;
             }
         }
 
@@ -59,6 +64,16 @@
             margin-left: 20px;
             color: white;
             width: fit-content;
+
+            &:hover {
+                color: $color-primary;
+            }
+            &:link {
+                text-decoration: none;
+            }
+            &:active {
+                text-decoration: none;
+            }
         }
     }
 }
