--- a/src/sass/section/_footer.scss
+++ b/src/sass/section/_footer.scss
@@ -11,6 +11,9 @@ footer {
     font-size: 24px;
     line-height: 34px;
     margin-top: 20px;
+    @include desktop {
+        margin-left: -20px;
+    }
     @include mobile {
         font-size: 12px;
         line-height: 17px;
