--- a/src/sass/utils/_loading.scss
+++ b/src/sass/utils/_loading.scss
@@ -1,58 +1,25 @@
 .loader {
     text-align: center;
     margin: auto;
+    margin: 60px auto;
 }
 
 .loader-turn {
-    position: relative;
-    width: 120px;
-    height: 90px;
-    margin: 0 auto;
-}
-.loader-turn:before {
-    content: '';
-    position: absolute;
-    bottom: 30px;
-    left: 50px;
-    height: 30px;
-    width: 30px;
+    width: 48px;
+    height: 48px;
+    border: 5px solid;
+    border-color: #ff3d00 transparent;
     border-radius: 50%;
-    background: #ff3d00;
-    animation: loading-bounce 0.5s ease-in-out infinite alternate;
-}
-.loader-turn:after {
-    content: '';
-    position: absolute;
-    right: 0;
-    top: 0;
-    height: 7px;
-    width: 45px;
-    border-radius: 4px;
-    box-shadow: 0 5px 0 #fff, -35px 50px 0 #fff, -70px 95px 0 #fff;
-    animation: loading-step 1s ease-in-out infinite;
+    display: inline-block;
+    box-sizing: border-box;
+    animation: rotation-turn 1s linear infinite;
 }
 
-@keyframes loading-bounce {
+@keyframes rotation-turn {
     0% {
-        transform: scale(1, 0.7);
-    }
-    40% {
-        transform: scale(0.8, 1.2);
-    }
-    60% {
-        transform: scale(1, 1);
+        transform: rotate(0deg);
     }
     100% {
-        bottom: 140px;
-    }
-}
-@keyframes loading-step {
-    0% {
-        box-shadow: 0 10px 0 rgba(0, 0, 0, 0), 0 10px 0 #fff, -35px 50px 0 #fff,
-            -70px 90px 0 #fff;
-    }
-    100% {
-        box-shadow: 0 10px 0 #fff, -35px 50px 0 #fff, -70px 90px 0 #fff,
-            -70px 90px 0 rgba(0, 0, 0, 0);
+        transform: rotate(360deg);
     }
 }
