--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -20,3 +20,61 @@ body {
         width: 100%;
     }
 }
+
+.page_404 {
+    text-align: center;
+    width: calc(90% - 40px);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    @include mobile {
+        margin: auto;
+        transform: translateX(-20px);
+    }
+    & h1 {
+        color: $color-primary;
+        font-size: 288px;
+        margin: 30px;
+        font-weight: 700;
+        line-height: 410px;
+        @include desktop {
+            font-size: 200px;
+        }
+        @include tab {
+            font-size: 130px;
+            line-height: 210px;
+        }
+        @include mobile {
+            font-size: 96px;
+            line-height: 138px;
+        }
+    }
+    & p {
+        color: $color-primary;
+        font-size: 36px;
+        font-weight: 500;
+        line-height: 51px;
+        @include tab {
+            font-size: 28px;
+        }
+        @include mobile {
+            font-size: 18px;
+            line-height: 26px;
+            margin-bottom: 80px;
+        }
+    }
+    &-link {
+        color: $color-primary;
+        font-size: 18px;
+        line-height: 26px;
+        font-weight: 500;
+        margin-bottom: 100px;
+        @include mobile {
+            font-size: 14px;
+            line-height: 20px;
+            margin-bottom: 80px;
+        }
+    }
+}
