--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -4,6 +4,7 @@
 @import './base/_base';
 
 @import './utils/_loading';
+@import './utils/_carroussel';
 @import './section/_banner';
 @import './section/_gridAppartement';
 @import './section/_header';
