--- a/src/sass/section/_gridAppartement.scss
+++ b/src/sass/section/_gridAppartement.scss
@@ -100,6 +100,7 @@
             width: calc(100% - 40px);
         }
         @include mobile {
+            height: 255px;
             width: $widthComponentWithMargin;
         }
     }
