--- a/src/sass/utils/_carroussel.scss
+++ b/src/sass/utils/_carroussel.scss
@@ -4,6 +4,14 @@
     justify-content: space-around;
     align-items: center;
     height: max-content;
+    @include tab {
+        margin-top: 10px;
+        transform: translateX(-30px);
+    }
+    @include mobile {
+        width: 100%;
+        margin-top: 0;
+    }
 }
 
 .carroussel-button {
@@ -17,14 +25,30 @@
     font-size: 46px;
     margin-left: 15px;
     cursor: pointer;
+    @include tab {
+        top: 160px;
+        font-size: 36px;
+        margin-left: 20px;
+    }
+    @include mobile {
+        top: 120px;
+        font-size: 20px;
+        margin-left: 20px;
+    }
     &:hover {
         color: $color-primary;
     }
 }
 .arrow-right {
     position: absolute;
-    top: 310px;
+
     right: 70px;
+    @include tab {
+        right: 15px;
+    }
+    @include mobile {
+        right: 10px;
+    }
 }
 
 .pagination-carroussel {
@@ -36,4 +60,7 @@
     font-size: 18px;
     font-weight: 500;
     line-height: 26px;
+    @include mobile {
+        transform: translate(-20px, -30px);
+    }
 }
