--- a/src/sass/section/_footer.scss
+++ b/src/sass/section/_footer.scss
@@ -5,14 +5,15 @@ footer {
     justify-content: center;
     align-items: center;
     max-width: 1440px;
-    width: 100%;
+    width: 100vw;
     height: 209px;
     color: white;
     font-size: 24px;
     line-height: 34px;
-    margin-top: 20px;
+    margin: 20px 0 0 0;
     @include desktop {
-        margin-left: -20px;
+        max-width: 100%;
+        width: 100vw;
     }
     @include mobile {
         font-size: 12px;
