--- a/src/sass/section/_gridAppartement.scss
+++ b/src/sass/section/_gridAppartement.scss
@@ -34,8 +34,14 @@
         width: 100%;
         height: 340px;
         position: relative;
-        background-color: $color-primary;
         text-decoration: none;
+        background: rgb(2, 0, 36);
+        background: linear-gradient(
+            0deg,
+            rgba(2, 0, 36, 0.9951573849878934) 0%,
+            rgba(255, 255, 255, 0) 50%
+        );
+        transition: all ease-in-out 300ms;
 
         @include mobile {
             max-width: 100%;
@@ -47,11 +53,9 @@
             height: 100%;
             object-fit: cover;
             border-radius: 10px;
-            position: relative;
-            top: 0;
-            left: 0;
-            z-index: 0;
             transition: all ease-in-out 300ms;
+            position: relative;
+            z-index: -1;
             &:hover {
                 opacity: 0.3;
             }
@@ -133,29 +137,30 @@
                     margin: 5px 0;
                 }
             }
-            & .appart-tag {
-                background-color: $color-primary;
-                color: white;
-                padding: 5px 15px;
-                border-radius: 10px;
-                width: 115px;
-                height: 25px;
-                margin-right: 10px;
-                @include mobile {
-                    width: 84px;
-                    height: 18px;
-                    margin-right: 5px;
-                    font-size: 10px;
-                    line-height: 14px;
+            & .appart__tag {
+                &-span {
+                    background-color: $color-primary;
+                    color: white;
+                    padding: 5px 15px;
+                    border-radius: 10px;
+                    width: 115px;
+                    height: 25px;
+                    margin-right: 10px;
+                    @include mobile {
+                        width: 184px;
+                        height: 18px;
+                        padding: 0;
+                        margin-right: 5px;
+                        font-size: 10px;
+                        line-height: 14px;
+                    }
                 }
             }
         }
     }
     &__host {
         width: 180px;
-
         @include mobile {
-            margin-top: 10px;
             width: 100%;
             display: flex;
             flex-direction: row-reverse;
@@ -180,10 +185,10 @@
                 }
             }
             & p {
+                margin: 0 5px 0 0;
                 display: flex;
                 flex-direction: column;
                 text-align: end;
-                margin-right: 5px;
                 color: $color-primary;
                 font-size: 18px;
                 line-height: 26px;
@@ -200,6 +205,7 @@
             justify-content: space-between;
             @include mobile {
                 margin: 0;
+                width: 110px;
             }
         }
     }
@@ -214,6 +220,11 @@
             display: flex;
             flex-direction: column;
         }
+    }
+}
+.pagination-carroussel {
+    @include mobile {
+        display: none;
     }
 }
 
