--- a/src/sass/section/_gridAppartement.scss
+++ b/src/sass/section/_gridAppartement.scss
@@ -95,31 +95,17 @@
     @include mobile {
         flex-direction: column;
     }
-    &__cover-banner {
-        width: 100%;
-        height: 415px;
-        border-radius: 25px;
-        object-fit: cover;
-        margin-top: 20px;
-        @include tab {
-            height: 350px;
-            border-radius: 10px;
-            margin: 0;
-            width: calc(100% - 40px);
-        }
-        @include mobile {
-            height: 255px;
-            width: $widthComponentWithMargin;
-        }
-    }
+
     &__header {
         &-details {
+            background-color: aquamarine;
+            width: 80%;
             & h1 {
                 color: $color-primary;
                 font-size: 36px;
                 font-weight: 500;
                 line-height: 51px;
-                margin: 10px 0 0 0;
+                margin: 0;
                 @include mobile {
                     font-size: 18px;
                     line-height: 26px;
@@ -138,18 +124,27 @@
                 }
             }
             & .appart__tag {
+                height: 25px;
+                margin: 0;
+                display: flex;
+                flex-direction: row;
+                justify-content: flex-start;
+                align-items: center;
                 &-span {
+                    text-align: center;
+                    display: block;
                     background-color: $color-primary;
                     color: white;
                     padding: 5px 15px;
                     border-radius: 10px;
-                    width: 115px;
-                    height: 25px;
+                    min-width: 85px;
+                    width: auto;
                     margin-right: 10px;
                     @include mobile {
-                        width: 184px;
+                        min-width: 65px;
                         height: 18px;
-                        padding: 0;
+                        padding: 0px 10px;
+                        border-radius: 5px;
                         margin-right: 5px;
                         font-size: 10px;
                         line-height: 14px;
@@ -222,17 +217,14 @@
         }
     }
 }
-.pagination-carroussel {
-    @include mobile {
-        display: none;
-    }
-}
 
 .accordion {
+    margin-top: 20px;
     background-color: aquamarine;
     width: 48%;
     @include mobile {
         width: 100%;
+        margin-top: 15px;
     }
     & h2 {
         margin: 0 0 20px 0;
