--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -3,9 +3,11 @@
 @import './base/_variables';
 @import './base/_base';
 
+@import './utils/_accordion';
 @import './utils/_loading';
 @import './utils/_carroussel';
+@import './section/_appartment';
 @import './section/_banner';
-@import './section/_gridAppartement';
+@import './section/_gridAppartment';
 @import './section/_header';
 @import './section/_footer';
