--- a/src/sass/section/_gridAppartment.scss
+++ b/src/sass/section/_gridAppartment.scss
@@ -27,6 +27,7 @@
         width: 100%;
         gap: 20px;
     }
+
     &-cardAppart {
         margin: auto;
         border-radius: 10px;
@@ -36,6 +37,7 @@
         position: relative;
         text-decoration: none;
         transition: all ease-in-out 300ms;
+        border: solid 2px transparent;
 
         @include mobile {
             max-width: 100%;
@@ -52,6 +54,17 @@
             position: relative;
         }
 
+        &:hover {
+            border: solid 2px $color-primary;
+
+            &::after {
+                background: linear-gradient(
+                    0deg,
+                    #ff6060 0%,
+                    rgba(255, 255, 255, 0) 50%
+                );
+            }
+        }
         &::after {
             content: '';
             background: linear-gradient(
@@ -68,13 +81,7 @@
             height: 100%;
             z-index: 0;
             border-radius: 10px;
-        }
-        &:hover ::after {
-            background: linear-gradient(
-                0deg,
-                rgba(206, 130, 122, 0.696) 0%,
-                rgba(255, 255, 255, 0) 50%
-            );
+            transition: all ease-in-out 300ms;
         }
 
         & h2 {
