navlink underline ok

--- a/src/sass/section/_header.scss
+++ b/src/sass/section/_header.scss
@@ -35,5 +35,8 @@ header {
         &:link {
             text-decoration: inherit;
         }
+        & .active {
+            text-decoration: underline;
+        }
     }
 }
