--- a/src/sass/utils/_accordion.scss
+++ b/src/sass/utils/_accordion.scss
@@ -21,6 +21,7 @@
         padding-left: 15px;
         transform: translateY(10px);
         cursor: pointer;
+        z-index: 2;
         @include mobile {
             height: 30px;
         }
@@ -56,13 +57,13 @@
         color: $color-primary;
         padding: 0;
         background-color: $color-secondary;
-        height: 0;
+        height: auto;
         border-radius: 10px;
         line-height: 26px;
-        z-index: -1;
         overflow: hidden;
-        transition: all ease-in-out 400ms;
+        transition: all ease-in-out 600ms;
         margin-bottom: 40px;
+        padding: 30px 20px 20px 20px;
         @include mobile {
             font-size: 12px;
             line-height: 18px;
@@ -72,6 +73,12 @@
             width: 90%;
             margin: 0;
         }
+        &-none {
+            @extend .accordion-content;
+            height: 0;
+            padding: 0 20px 0 20px;
+            transition: all ease-in-out 600ms;
+        }
     }
     &__appart {
         display: grid;
@@ -79,6 +86,7 @@
         max-width: 1240px;
         gap: 45px;
         margin: 30px auto;
+        transition: all ease-in-out 400ms;
         @include desktop {
             width: calc(100% - 40px);
         }
