--- a/src/sass/utils/_accordion.scss
+++ b/src/sass/utils/_accordion.scss
@@ -1,5 +1,4 @@
 .accordion {
-    height: auto;
     margin-top: 0px;
     @include mobile {
         height: fit-content;
@@ -50,20 +49,18 @@
         }
     }
     &-content {
-        margin: 0;
         display: flex;
         flex-direction: column;
         font-weight: 400;
         color: $color-primary;
-        padding: 0;
         background-color: $color-secondary;
-        height: auto;
         border-radius: 10px;
         line-height: 26px;
         overflow: hidden;
         transition: all ease-in-out 600ms;
         margin-bottom: 40px;
-        padding: 30px 20px 20px 20px;
+        padding: 30px 0px 20px 20px;
+        height: 70%;
         @include mobile {
             font-size: 12px;
             line-height: 18px;
