--- a/src/sass/utils/_accordion.scss
+++ b/src/sass/utils/_accordion.scss
@@ -67,7 +67,7 @@
         }
         & p {
             display: block;
-            width: 90%;
+            width: 95%;
             margin: 0;
         }
         &-none {
@@ -101,6 +101,23 @@
         width: 80%;
         @include tab {
             width: calc(100% - 40px);
+        }
+        & .accordion__header {
+            font-size: 24px;
+            line-height: 34px;
+            @include mobile {
+                font-size: 13px;
+                line-height: 18px;
+            }
+        }
+        & .accordion-content {
+            font-size: 24px;
+            font-weight: 400;
+            line-height: 34px;
+            @include mobile {
+                font-size: 12px;
+                line-height: 17px;
+            }
         }
     }
 }
